# datafiletoolbox

./: .gitignore  LICENSE  README.md  SimulationResults _before split.py  SimulationResults.py  __init__.py  gridManipulation.py  keywords.py  loadBMS.py  propertyManipulation.py  pyproject.toml  readInput.py  read_VIPsss.py  read_VIPsss_noUnitMultiplier.py  setup.py  simAuxiliars.py  simObject copy.py  simObject.py  simObject_self-attempt.py  stringformat.py  writeOutput.py
Classes/: Errors.py  SimPandas.py
PlotResults/: SmartPlot.py
SPE3/vip/: SPE3.status  (+19 more)
SimInput/: __init__.py  propertyManipulation.py
SimPlot/: SmartPlot.py  __init__.py
SimulationInput/: VFP.py  propertyManipulation.py  readInput.py  read_VIPsss.py  read_VIPsss_noUnitMultiplier.py  simObject.py  writeOutput.py
SimulationResults/: CSVSimResultNexusDesktopObject.py  __init__.py  eclObject.py  excelObject.py  h5Object.py  loader.py  mainObject.py  nexusObject.py  rsmObject.py  save_load.py  tableObject.py  vipObject.py  vipObject_withCSVsupport_OLD.py
_Classes/: EclSumLoader.py  Errors.py  Iterators.py  SimPandas.py
_common/: eclDATES.py  functions.py  inout.py  keywordsConversions.py  progressbar.py  readBinary.py  sharedVariables.py  slope.py  stringformat.py  unify.py  units.py  versions.py
_dictionaries/: __init__.py  calculations.py  keywords.py  unitsSystems.py
calculations/: MinMaxScaled.py  Percentual.py  Square.py  StandardError.py  Weighted.py  ZScaled.py
common/: __init__.py  eclDATES.py  functions.py  inout.py  keywordsConversions.py  loader.py  stringformat.py  versions.py
(+148 files in other folders)
