[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datafiletoolbox"
version = "0.52.24"
authors = [
  { name="Martin Carlos Araya", email="martinaraya@gmail.com" },
]
description = "a set of utilities to deal with results from reservoir simulators and other sources of tabulated data."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    #"License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy', 
    'pandas', 
    'matplotlib', 
    'seaborn', 
    'h5py', 
    'cwrap', 
    'openpyxl',
]
